--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,15 +22,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="421dp"
-        android:layout_height="46dp"
+        android:layout_height="55dp"
         android:layout_marginTop="8dp"
-        android:background="@color/white"
-        android:theme="@style/Widget.BottomNavigationView"
+        android:backgroundTint="@color/lightGrey"
         app:itemIconSize="20dp"
-        app:itemIconTint="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
