--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,8 +12,9 @@
         android:icon="@drawable/baseline_dashboard_24"
         android:title="@string/title_dashboard" />
     <item
-        android:id="@+id/navigation_notification"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Notifications" />
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/profile_icon"
+
+        android:title="Profile" />
 
 </menu>
