--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#ffffff</color>
     <color name="colorGrey">#424242</color>
     <color name="lightGrey">#d32f2f</color>
+    <color name="greyLighter">#90a4ae</color>
     <color name="colorSecondary">#f57f17</color>
 </resources>
