--- a/app/src/main/res/layout/fragment_expenseslist.xml
+++ b/app/src/main/res/layout/fragment_expenseslist.xml
@@ -12,13 +12,14 @@
 
     <ListView
         android:id="@+id/listview_expenses"
-        android:layout_width="358dp"
+        android:layout_width="412dp"
         android:layout_height="497dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:divider="@null"
+        android:dividerHeight="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
