--- a/app/src/main/res/layout/fragment_expensetracker.xml
+++ b/app/src/main/res/layout/fragment_expensetracker.xml
@@ -37,7 +37,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.161"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_exptype"
@@ -94,9 +95,25 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
         android:background="@color/colorAccent"
+        android:elevation="10dp"
         android:theme="@style/AlertDialog.AppCompat"
+        android:touchscreenBlocksFocus="true"
         app:layout_constraintBottom_toTopOf="@+id/til_exptype"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="8dp"
+        android:text="TextView"
+        android:textColor="@color/greyLighter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
