modified login page

--- a/app/src/main/res/menu/actionbar.xml
+++ b/app/src/main/res/menu/actionbar.xml
@@ -8,5 +8,10 @@
         android:title="refresh"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/action_logout"
+        android:title="Logout"
+        app:showAsAction="never"/>
+
 
 </menu>
