--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,141 +4,221 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".Activities.LoginActivity">
 
+
+    <Button
+        android:id="@+id/btn_login"
+        style="@android:style/Widget.Material.Light.Button.Borderless"
+        android:layout_width="112dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="120dp"
+        android:clickable="true"
+        android:contextClickable="true"
+        android:cursorVisible="true"
+        android:text="Login"
+        android:textColor="@color/colorSecondary"
+        android:textColorLink="@color/colorSecondary"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fab"
+        app:layout_constraintHorizontal_bias="0.739"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/textView"
-        android:layout_width="239dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="116dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/roboto_mono"
         android:gravity="center"
         android:paddingTop="40dp"
         android:paddingBottom="40dp"
         android:singleLine="true"
         android:text="@string/app_name"
-        android:textColor="#000000"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_margin="20dp"
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/textInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="88dp"
+
         android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:hint="email"
-        android:maxLength="30"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textSize="20sp"
+        android:hint="Email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:textColorHint="@color/greyLighter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:textColor="#000000"
+            android:textColorHint="@color/greyLighter"
 
-    <EditText
-        android:id="@+id/et_firstName"
-        android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:hint="first name"
-        android:maxLength="30"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+            />
 
-    <EditText
-        android:id="@+id/et_maxSpending"
-        android:layout_width="181dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:hint="max spending"
-        android:inputType="text"
-        android:maxLength="30"
-        android:maxLines="1"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_lastname" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/et_lastname"
-        android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:hint="last name"
-        android:inputType="text"
-        android:maxLength="30"
-        android:maxLines="1"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_firstName" />
+    <com.google.android.material.textfield.TextInputLayout
 
-    <Button
-        android:id="@+id/bt_login"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="76dp"
-        android:background="@color/colorPrimary"
-        android:text="Login"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/textInputLayout2"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
 
-    <EditText
-        android:id="@+id/et_phone"
-        android:layout_width="182dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center"
-
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="phone number "
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/bt_login"
+        android:hint="Password"
+        android:textColorHint="@color/greyLighter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_maxSpending" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textColor="#000000" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!--<EditText-->
+        <!--android:id="@+id/et_email"-->
+        <!--android:layout_width="180dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_margin="20dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="48dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:gravity="center"-->
+        <!--android:hint="email"-->
+        <!--android:maxLength="30"-->
+        <!--android:maxLines="1"-->
+        <!--android:singleLine="true"-->
+        <!--android:textSize="20sp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.497"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/textView" />-->
+
+
+    <!--<EditText-->
+        <!--android:id="@+id/et_firstName"-->
+        <!--android:layout_width="180dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="312dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:gravity="center"-->
+        <!--android:hint="first name"-->
+        <!--android:maxLength="30"-->
+        <!--android:maxLines="1"-->
+        <!--android:singleLine="true"-->
+        <!--android:textSize="20sp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.637"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+
+    <!--<EditText-->
+        <!--android:id="@+id/et_maxSpending"-->
+        <!--android:layout_width="181dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="304dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:gravity="center"-->
+        <!--android:hint="max spending"-->
+        <!--android:inputType="text"-->
+        <!--android:maxLength="30"-->
+        <!--android:maxLines="1"-->
+        <!--android:textSize="20sp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.565"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/et_lastname" />-->
+
+    <!--<EditText-->
+        <!--android:id="@+id/et_lastname"-->
+        <!--android:layout_width="180dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="328dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:gravity="center"-->
+        <!--android:hint="last name"-->
+        <!--android:inputType="text"-->
+        <!--android:maxLength="30"-->
+        <!--android:maxLines="1"-->
+        <!--android:textSize="20sp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.572"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/et_firstName" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/bt_login"-->
+        <!--style="@style/Base.Widget.AppCompat.Button.Colored"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginBottom="76dp"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:text="Login"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textSize="20sp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.498"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
+
+    <!--<EditText-->
+        <!--android:id="@+id/et_phone"-->
+        <!--android:layout_width="182dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_gravity="center"-->
+
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:ems="10"-->
+        <!--android:gravity="center"-->
+        <!--android:hint="phone number "-->
+        <!--android:inputType="number"-->
+        <!--app:layout_constraintBottom_toTopOf="@+id/bt_login"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.568"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/et_maxSpending"-->
+        <!--app:layout_constraintVertical_bias="1.0" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
