--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,12 +27,13 @@
 
         <TextView
             android:id="@+id/tv_currentStreak"
-            android:layout_width="wrap_content"
+            android:layout_width="37dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:fontFamily="@font/roboto_mono"
             android:text="0"
-            android:textColor="#000000"
+            android:textAlignment="center"
+            android:textColor="@color/colorSecondary"
             android:textSize="25dp" />
 
     </androidx.cardview.widget.CardView>
@@ -60,10 +61,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="116dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="sans-serif-light"
         android:padding="2dp"
         android:text="Here is your current streak"
-        android:textColor="#000000"
+        android:textColor="@color/greyLighter"
         android:textSize="20dp"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,10 +79,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="sans-serif-light"
         android:padding="2dp"
         android:text="Countdown for next point"
-        android:textColor="#000000"
+        android:textColor="@color/greyLighter"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,11 +113,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
-            android:fontFamily="@font/roboto_thin"
             android:text="0"
-            android:textColor="#000000"
-            android:textSize="25dp"
-            android:textStyle="bold" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="25dp" />
 
     </androidx.cardview.widget.CardView>
 
